@@ -8,6 +8,7 @@
 
   * Allow clicking links by id and id regexp (gaffo)
   * Raise Webrat::PageLoadError when a failure occurs so that application exceptions can be more accurately tested (Ryan Briones)
+  * Helpful error message for missing option in select box. (Ben Mabey, Ticket #40)
 
 == 0.3.2 / 2008-11-08
 
